styles/BackToTopButton.module.scss
.root {
  max-width: 1366px;
  margin: auto;
  position: sticky;
  bottom: 10px;
}

.backToTop {
  background-color: transparent;
  cursor: pointer;
  font-family: var(--title-font-family);
  font-size: 20px;
  font-weight: bold;
  border-radius: 50%;
  border: 0;
  padding: 2px;
  text-align: center;
  // position: sticky;
  // bottom: 10px;
  display: block;
  opacity: 0;
  margin-left: auto;
  margin-right: 0px;
  transition: opacity 0.5s ease-in-out;
  // right: 200px;
  &:hover {
    text-decoration: underline;
    color: var(--accent-color);
    & .iconImg {
      opacity: 0;
    }
    & .iconImgActive {
      opacity: 1;
    }
  }
  &:focus {
    outline: 0;
  }
}

.visible {
  opacity: 1;
}
.notVisible {
  opacity: 0;
}

.icon {
  width: 30px;
  height: 30px;
  margin: auto;
  position: relative;
  cursor: pointer;
  text-decoration: none;
}
.iconImg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  object-fit: contain;
  transition: all 0.1s linear;
}
.iconImgActive {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  object-fit: contain;
  opacity: 0;
  transition: all 0.1s linear;
}

.noMobile {
  display: none;
}
@media (min-width: 1000px) {
  .root {
    padding-right: 30px;
  }

  .noMobile {
    display: block;
  }
  .backToTop {
    bottom: 50px;
  }
}

